--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -1,10 +1,32 @@
 .contacts__item {
   font-size: 21px;
-  line-height: 30px;
+  line-height: 21px;
 }
 
 .contacts__town {
   font-size: 16px;
-  line-height: 24px;
+  display: block;
+  line-height: 16px;
   color: @text-color;
+  padding-top: 7px;
+  padding-left: 8px;
+}
+
+.contacts__item--address {
+  width: 200px;
+  text-align: center;
+  padding-top: 10px;
+  padding-left: 2px;
+  margin-right: 85px;
+}
+
+.contacts__item--phone {
+  margin-right: 113px;
+  padding-left: 30px;
+  padding-top: 21px;
+}
+
+.contacts__item--email {
+  padding-left: 42px;
+  padding-top: 21px;
 }
