--- a/less/blocks/disigns-slider.less
+++ b/less/blocks/disigns-slider.less
@@ -1,10 +1,39 @@
+.disigns-slider {
+  width: 100%;
+  overflow: hidden;
+  margin: 0 auto;
+  position: relative;
+  box-sizing: border-box;
+  margin-bottom: 80px;
+}
+
 .disigns-slider__title {
   font-family: @font-title;
   font-size: 40px;
   line-height: 50px;
+  .null-indents();
+  margin-bottom: 9px;
 }
 
 .disigns-slider__caption {
   color: @border-color;
   text-transform: uppercase;
+  .null-indents();
+  padding-left: 4px;
+  font-stretch: ultra-expanded;
+  letter-spacing: 0.03em;
+  word-spacing: 1px;
+}
+
+
+.disigns-slider__wrapper--flex {
+  display: flex;
+  margin: 0 auto;
+  width: @common-width;
+}
+
+.disigns-slider__wrapper--title {
+  width: @common-width;
+  margin: 0 auto;
+  position: relative;
 }
