--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -1,11 +1,57 @@
 .page-footer {
   background-color: rgb(242, 242, 242);
+  padding-top: 70px;
+  padding-bottom: 25px;
 }
 .page-footer__title {
+  display: block;
   font-size: 21px;
   line-height: 26px;
+  width: 350px;
+  .null-indents();
+  margin: 0 auto;
+  padding-left: 26px;
+  margin-bottom: 5px;
 }
 
 .page-footer__caption {
   color: @text-color;
+  .null-indents();
+  width: 450px;
+  text-align: center;
+  margin: 0 auto;
+  padding-right: 18px;
+}
+
+.page-footer__social {
+  width: 300px;
+  margin: 0 auto;
+  box-sizing: border-box;
+  padding-left: 32px;
+  padding-top: 2px;
+  margin-bottom: 25px;
+}
+
+.page-footer__wrapper--about-us {
+  width: 100%;
+}
+
+.page-footer__wrapper--about-us {
+  margin-bottom: 70px;
+}
+
+.page-footer__wrapper--contacts {
+  display: flex;
+  align-items: center;
+  width: 900px;
+  margin: 0 auto;
+  justify-content: flex-start;
+  margin-bottom: 77px;
+}
+
+.page-footer__wrapper--copywrites {
+  width: 100%;
+  padding-left: 4.2%;
+  padding-right: 5.4%;
+  box-sizing: border-box;
 }
