--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 @import "fonts.less";
 @import "normalize.less";
+@import "mixins.less";
 @import "variables.less";
 @import "scaffolding.less";
 @import "blocks/page-header.less";
@@ -11,3 +12,5 @@
 @import "blocks/page-footer.less";
 @import "blocks/contacts.less";
 @import "blocks/copywrites.less";
+@import "blocks/page-container.less";
+@import "blocks/social-button.less";
