--- a/less/variables.less
+++ b/less/variables.less
@@ -4,4 +4,5 @@
 @text-color: rgb(102, 102, 102);
 @button-color: rgb(249, 87, 46);
 @orange: rgb(249, 87, 46);
-@border-color: rgb(51, 181, 163);
+@border-color: rgb(99, 210, 193);
+@common-width: 1006px;
