--- a/less/blocks/copywrites.less
+++ b/less/blocks/copywrites.less
@@ -1,3 +1,10 @@
 .copywrites {
   color: @text-color;
+  border-top: 1px solid rgb(204, 204, 204);
+  padding-top: 31px;
+  min-width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  padding-right: 1px;
+  box-sizing: border-box;
 }
