--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,15 +1,48 @@
+.feature {
+  width: 450px;
+  border-top: 4px solid rgb(99, 210, 193);
+  padding-top: 32px;
+  padding-left: 2px;
+  margin-bottom: 95px;
+
+  &:nth-of-type(2n + 1) {
+    margin-right: 78px;
+  }
+
+  &:nth-of-type(2n) {
+    padding-left: 4px;
+  }
+}
+
 .feature__title {
   font-family: @font-title;
   font-size: 24px;
   line-height: 30px;
+  .null-indents();
+  margin-bottom: 13px;
 }
 
 .feature__caption {
   color: @text-color;
+  .null-indents();
 }
 
 .feature__caption--time {
   font-family: @font-title;
   font-size: 64px;
   color: rgb(0, 0, 0);
+  text-align: center;
+  margin-bottom: 62px;
+}
+
+.feature__time {
+  padding-left: 0;
+  padding-top: 41px;
+  border: 4px solid @border-color;
+  box-sizing: border-box;
+}
+
+.feature__title--time {
+  text-align: center;
+  margin-bottom: 19px;
 }
