--- a/less/blocks/page-header.less
+++ b/less/blocks/page-header.less
@@ -1,7 +1,20 @@
-.page-title {
+.page-header {
+  display: flex;
+  box-sizing: border-box;
+  padding-left: 3%;
+  margin: 0 auto;
+  height: 100vh;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+.page-header__title {
   font-family: @font-title;
   font-size: 64px;
   line-height: 64px;
+  .null-indents();
+  width: 520px;
+  margin-bottom: 30px;
 }
 
 .page-header__text {
@@ -11,4 +24,67 @@
 
 .page-header__start {
   color: @text-color;
+}
+
+.page-header__column--left {
+  display: flex;
+  align-items: flex-start;
+  align-content: space-between;
+  flex-wrap: wrap;
+  min-width: 520px;
+  margin-right: 2%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.page-header__logo {
+  padding-left: 4px;
+  width: 100%;
+//  margin-bottom: 20%;
+}
+
+.page-header__text {
+  .null-indents();
+  width: 480px;
+  padding-left: 4px;
+}
+
+.page-header__wrapper--text {
+//  margin-bottom: 10%;
+}
+.page-header__wrapper--button  {
+  padding-left: 4px;
+  //border: 1px solid green;
+  width: 100%;
+//  margin-bottom: 15%;
+}
+
+.page-header__start {
+  margin-left: 25px;
+}
+
+.page-header__column--right {
+//  display: flex;
+//  min-width: 50%;
+  width: 100%;
+  min-width: 300px;
+//  flex-basis: 942px;
+  padding-top: 19px;
+  padding-right: 10px;
+  position: relative;
+  //border: 1px solid red;
+  box-sizing: border-box;
+//  height: 100%;
+  background-image: url("../img/video.jpg");
+  background-size: contain;
+//  background-size: auto 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+//  padding-right: 20px;
+}
+
+.page-header__button--contacts {
+  position: absolute;
+  right: 83px;
+  top: 58px;
 }
