--- a/less/blocks/write-us.less
+++ b/less/blocks/write-us.less
@@ -1,21 +1,59 @@
+.write-us {
+  width: @common-width;
+  margin: 0 auto;
+  padding-right: 22px;
+  margin-bottom: 134px;
+}
+
 .write-us__fieldset {
-  border: 3px solid @border-color;
+  border: 4px solid @border-color;
+  margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  box-sizing: border-box;
+  width: 984px;
 }
 
 .write-us__title {
   font-family: @font-title;
   font-size: 40px;
   line-height: 50px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
+.write-us__legend {
+  margin: 0 auto;
+}
 .write-us__special {
   text-transform: uppercase;
+  .null-indents();
+  width: 300px;
+  text-align: left;
+  margin: 0 auto;
+  padding-left: 58px;
+  padding-top: 15px;
+  font-stretch: ultra-expanded;
+  letter-spacing: 0.03em;
+  word-spacing: 1px;
+  margin-bottom: 60px;
 }
 
 .write-us__input {
   font-family: @font-common;
   font-size: 18px;
   line-height: 24px;
+  width: 500px;
+  box-sizing: border-box;
+  margin: 0 auto;
+  border-radius: 5px;
+  border: 1px solid rgb(204, 204, 204);
+  padding-left: 25px;
+  padding-top: 16px;
+  padding-bottom: 18px;
+  padding-right: 10px;
+  margin-bottom: 30px;
 
   &::placeholder {
     color: @text-color;
@@ -37,4 +75,23 @@
   line-height: 14px;
   color: @orange;
   text-decoration: none;
+}
+
+.write-us__button {
+  width: 250px;
+  margin: 0 auto;
+  margin-bottom: 24px;
+}
+
+.write-us__wrapper {
+  width: 100%;
+  margin-bottom: 44px;
+}
+
+.write-us__label {
+  width: 100%;
+}
+
+.write-us__label:last-of-type {
+  margin-bottom: 18px;
 }
