--- a/less/scaffolding.less
+++ b/less/scaffolding.less
@@ -5,12 +5,14 @@ body {
   background-color: white;
   padding: 0;
   margin: 0;
+  //width: 100%;
+  //min-width: 1000px;
 }
-
+/*
 img {
   max-width: 100%;
   height: auto;
-}
+}*/
 
 .visually-hidden,
 .visually-hidden:not(:focus):not(:active),
@@ -42,15 +44,28 @@ h1, h2, h3 {
 .button--scroll {
   background-color: rgb(255, 255, 255);
   color: @orange;
+  width: 300px;
+  text-align: left;
+  box-sizing: border-box;
+//  border: 1px solid black;
+  height: 50px;
+  padding-left: 62px;
+  //align-self: flex-end;
 }
 
 .button--round {
   background-color: @button-color;
   color: rgb(255, 255, 255);
+  padding-top: 17px;
+  padding-bottom: 16px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border-radius: 50px;
 }
 
 .button--contacts {
   font-size: 21px;
-  font-size: 30px;
+  line-height: 30px;
   background-color: rgb(255, 255, 255);
+  background-color: transparent;
 }
