--- a/less/blocks/slider-item.less
+++ b/less/blocks/slider-item.less
@@ -16,13 +16,13 @@
 
 .slider-item--left {
   position: absolute;
-  left: -@common-width/2;
+  left: -@common-width + 100px;
 //  left: 0;
 }
 
 .slider-item--right {
   position: absolute;
-  right: -@common-width/2;
+  right: -@common-width;
 //  left: @common-width;
 }
 
