--- a/less/blocks/social-button.less
+++ b/less/blocks/social-button.less
@@ -3,6 +3,18 @@
   width: 50px;
   height: 50px;
   background-color: @orange;
+  box-sizing: border-box;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  padding-top: 15px;
+
+  &:hover,
+  &:active,
+  &:focus {
+    box-shadow: 0 15px 20px rgba(249, 87, 46, 0.7);
+    background-color: rgb(255, 123, 89);
+    outline: none;
+  }
 }
 
 .social-button {
