--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -24,9 +24,51 @@
   margin-right: 113px;
   padding-left: 30px;
   padding-top: 21px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    left: -3px;
+    top: 19px;
+    background-image: url("../img/svg/phone.svg");
+    background-repeat: no-repeat;
+  }
 }
 
 .contacts__item--email {
   padding-left: 42px;
   padding-top: 21px;
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 30px;
+    height: 20px;
+    left: 1px;
+    top: 21px;
+    background-image: url("../img/svg/mail.svg");
+    background-repeat: no-repeat;
+  }
+
+  &::after {
+    content: "";
+    position: absolute;
+    width: 214px;
+    height: 3px;
+    background-color: @orange;
+    left: 40px;
+    bottom: -5px;
+  }
+
+  &:hover,
+  &:focus {
+    color: @orange;
+    outline: none;
+  }
 }
