--- a/less/blocks/disigns-slider.less
+++ b/less/blocks/disigns-slider.less
@@ -30,10 +30,51 @@
   display: flex;
   margin: 0 auto;
   width: @common-width;
+  position: relative;
 }
 
 .disigns-slider__wrapper--title {
   width: @common-width;
   margin: 0 auto;
   position: relative;
+}
+
+.disigns-slider__control {
+  display: flex;
+  height: 50px;
+  width: 75px;
+  justify-content: space-between;
+  position: absolute;
+  right: 99px;
+  bottom: 16px;
+}
+
+.disigns-slider__button {
+  width: 22px;
+  height: 45px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.disigns-slider__button--prev {
+  background-image: url("../img/svg/arrow_left.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &:hover,
+  &:focus {
+    background-image: url("../img/svg/arrow_left_hover.svg");
+  }
+}
+
+.disigns-slider__button--next {
+  background-image: url("../img/svg/arrow_right.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &:hover,
+  &:focus {
+    background-image: url("../img/svg/arrow_right_hover.svg");
+  }
 }
