Finished test work

--- a/less/blocks/slider-item.less
+++ b/less/blocks/slider-item.less
@@ -17,13 +17,19 @@
 .slider-item--left {
   position: absolute;
   left: -@common-width + 100px;
-//  left: 0;
+
+  & img {
+    opacity: 0.6;
+  }
 }
 
 .slider-item--right {
   position: absolute;
   right: -@common-width;
-//  left: @common-width;
+
+  & img {
+    opacity: 0.6;
+  }
 }
 
 .slider-item__image {
