--- a/less/blocks/page-footer.less
+++ b/less/blocks/page-footer.less
@@ -2,6 +2,8 @@
   background-color: rgb(242, 242, 242);
   padding-top: 70px;
   padding-bottom: 25px;
+  width: 100%;
+  box-sizing: border-box;
 }
 .page-footer__title {
   display: block;
