--- a/less/blocks/write-us.less
+++ b/less/blocks/write-us.less
@@ -8,11 +8,9 @@
 .write-us__fieldset {
   border: 4px solid @border-color;
   margin: 0 auto;
-  display: flex;
-  flex-wrap: wrap;
-  text-align: center;
   box-sizing: border-box;
   width: 984px;
+  height: 705px;
 }
 
 .write-us__title {
@@ -65,7 +63,7 @@
   padding-top: 16px;
   padding-bottom: 18px;
   padding-right: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 28px;
 
   &::placeholder {
     color: @text-color;
@@ -117,10 +115,47 @@
 .write-us__input-caption {
   position: absolute;
   left: 26%;
-  top: -7px;
+  top: -12px;
   background-color: rgb(255, 255, 255);
   padding-left: 5px;
   padding-right: 5px;
   color: @orange;
   font-size: 13px;
+}
+
+.write-us__text {
+  display: inline-block;
+  font-size: 16px;
+  line-height: 24px;
+  font-stretch: ultra-expanded;
+  letter-spacing: 0.03em;
+  word-spacing: 1px;
+  text-transform: uppercase;
+  width: 300px;
+}
+
+
+.write-us__modal--form {
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+}
+
+.write-us__modal--submit {
+  display: none;
+  text-align: center;
+  padding-top: 320px;
+  position: relative;
+
+  &::before {
+    content: "";
+    position: absolute;
+    width: 220px;
+    height: 220px;
+    background-image: url("../img/svg/ok.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 100px;
+    left: 380px;
+  }
 }
